@@ -38,6 +38,9 @@ new:
   my case its the most common entry to change, e.g. to select a folder for the recording.
 - auto enable Wareagle icons if VDRSymbols font is used (can be overwritten with
   WarEagleIcons=0 in epgsearchmenu.conf), suggested by Ronny Kornexl
+- the correct content encoding for mail notifications is now automatically detected
+- epgsearch now autodetects an installed pin plugin or graphtft, also the optional libraries
+  libpcre und libtre (can be turned off by commenting AUTOCONFIG in the Makefile)
 fixes:
 - fixed a crash when pressing 'Ok' in an empty timers done menu
 - fixed a crash when using the progressbar and events with 0 duration exist, thanks 
